# filmswap

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
filmswap/: __main__.py  bot.py  manage.py  settings.py
messages/: film.pot  manga.pot  reference.pot  visual_novel.pot
